--- a/css/app.css
+++ b/css/app.css
@@ -65,7 +65,7 @@ input, textarea, select, button {
 
 .site-headline {
     font-size: 48px;
-    margin: 10px 0;
+    margin: 15px 0 10px 0;
     padding: 0;
 }
 
