--- a/css/app.css
+++ b/css/app.css
@@ -36,6 +36,69 @@ input, textarea, select, button {
     font-family: "Google Sans", sans-serif; 
 }
 
+/* preloader */
+#preloader-background {
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999; }
+  
+  #spinners {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+  
+  .loader {
+    border-radius: 100%;
+    height: 100px;
+    margin: 0 auto;
+    position: relative; }
+  
+  #loader span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    background-color: #262626;
+    margin: 35px 5px; }
+  
+  #loader span:nth-child(1) {
+    background-color: #557ebf;
+    animation: bounce .5s ease-in-out infinite; }
+  
+  #loader span:nth-child(2) {
+    background-color: #ea4535;
+    animation: bounce .5s ease-in-out 0.33s infinite; }
+  
+  #loader span:nth-child(3) {
+    background-color: #f9bc15;
+    animation: bounce .5s ease-in-out 0.66s infinite; }
+  
+  #loader span:nth-child(4) {
+    background-color: #36a852;
+    animation: bounce .5s ease-in-out 0.99s infinite; }
+  
+  @keyframes bounce {
+    0%, 75%, 100% {
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      -o-transform: translateY(0);
+      transform: translateY(0); }
+    25% {
+      -webkit-transform: translateY(-20px);
+      -ms-transform: translateY(-20px);
+      -o-transform: translateY(-20px);
+      transform: translateY(-20px); } }
+
+
 #splash { /* full site container */
     height: 100%;
     min-height: 100%;
@@ -117,4 +180,5 @@ input, textarea, select, button {
     color: rgba(61, 65, 68, 0.3);
     font-size: 12px !important;
 }
+
 
